<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="ug.flights.huza.flightsapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="6dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#dcdada"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selectFlights"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    />

                <fonts.LucidaBright
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/origin"
                    android:textColor="#201f1f"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    />
                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/origin_sp"
                    android:layout_width="match_parent"
                    android:layout_margin="6dp"
                    android:background="@color/spinnercolor"
                    android:layout_height="40dp"
                    android:spinnerMode="dialog" />
                <fonts.LucidaBright
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textColor="#201f1f"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/destination_sp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/spinnercolor"
                    android:layout_margin="6dp"
                    android:spinnerMode="dialog" />

                <fonts.LucidaBright
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flightDate"
                    android:textColor="#201f1f"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    />

                <EditText
                    android:id="@+id/date_edt"
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:inputType="date"
                    android:ems="10"
                    android:focusable="false"
                    android:layout_height="wrap_content" />


                <Button
                    android:layout_margin="6dp"
                    android:text="@string/searchflights"
                    android:layout_width="match_parent"
                    android:textColor="#fff"
                    android:onClick="onSearchFlights"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
